# ckan-mcp-server

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  mcp_ckan_server.py  product_design.md  pyproject.toml  requirements.txt  setup.py  test_analysis_tools.py  verify_server.py
backend/: env.sample  mcp_ckan_server.py
backend/tests/: Dockerfile  Makefile  docker-compose.yml  env.sample  requirements.txt  test.py
docs/requests/: rentsafe-relevant-dataset.md
